--- a/pankaj/index.html
+++ b/pankaj/index.html
@@ -15,9 +15,9 @@
                 <div class="dropdown">
                     <a class="contact">Contact</a>
                     <div class="dropdown_content">
-                        <a target="_blank" href="https://www.facebook.com/nguyenduc1511">Facebook</a>
-                        <a target="_blank" href="https://www.linkedin.com/in/nguyentrungduc1511/">LinkedIn</a>
-                        <a target="_blank" href="https://github.com/sanshironagato">Github</a>
+                        <a target="_blank" href="https://www.facebook.com/">Facebook</a>
+                        <a target="_blank" href="https://www.linkedin.com/">LinkedIn</a>
+                        <a target="_blank" href="https://github.com/">Github</a>
                     </div>
                 </div>
                 <button class="darkmode_button" onclick="darkmode()">🌙</button>
@@ -29,12 +29,12 @@
 
     <br> <br> 
 
-    <a target="_blank" href="https://www.codewars.com/users/sanshironagato">
-        <img src="https://www.codewars.com/users/sanshironagato/badges/large">
+    <a target="_blank" href="https://www.codewars.com">
+        <img src="https://www.codewars.com/">
     </a>
 
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     
-    <footer> Made by sanshironagato with Lòvé </footer>
+    <footer> Made by Pankaj with Lòvé </footer>
     </body>
 </html>
