--- a/pankaj/index.html
+++ b/pankaj/index.html
@@ -30,7 +30,7 @@
     <br> <br> 
 
     <a target="_blank" href="https://www.codewars.com">
-        <img src="https://www.codewars.com/">
+        <img src="pp.jpg">
     </a>
 
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
