--- a/rk/index.html
+++ b/rk/index.html
@@ -26,8 +26,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>cloudbase</h1>
-								<p><!--[-->A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<!--]--><br />
-								<!--[-->for free under the <a href="https://html5up.net/license">Creative Commons</a> license.<!--]--></p>
+								<p><!--[-->A fully responsive company dedicated to support cloud Infrastructure and cloud managed services<!--]--><br />
+								<!--[-->we support devops activities from implementing devops to manage and trobleshooting issues related to devops</a> license.<!--]--></p>
 							</div>
 						</div>
 						<nav>
