--- a/rk/index.html
+++ b/rk/index.html
@@ -27,7 +27,7 @@
 							<div class="inner">
 								<h1>cloudbase</h1>
 								<p><!--[-->A fully responsive company dedicated to support cloud Infrastructure and cloud managed services<!--]--><br />
-								<!--[--> we can design, implement & support devops</a> license.<!--]--></p>
+								<!--[--> we can design, implement & support devops.<!--]--></p>
 							</div>
 						</div>
 						<nav>
